# lemzha-k

./: .gitignore  README.md  best_hyperparams.json  lodocv_results.json  pyproject.toml
core_logs_tmp/20220822_nezha_0/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_1/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_10/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_11/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_12/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_13/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_15/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_16/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_17/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_18/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_19/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_2/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_20/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_21/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_3/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_4/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_5/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_6/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_7/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_8/: logs_service_texts.parquet
core_logs_tmp/20220822_nezha_9/: logs_service_texts.parquet
core_logs_tmp/20220823_nezha_0/: logs_service_texts.parquet
(+2089 files in other folders)
