[project]
name = "lemma-rca-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.0,<2.3", # cuDF requires numpy<2.3
    "cudf-cu12>=25.0",
    "pandas>=2.3.3",
    "parquet>=1.3.1",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "ipykernel>=7.1.0",
    "dask>=2025.11.0",
    "torch>=2.9.1",
    "optuna>=4.6.0",
]

[tool.uv]
extra-index-url = ["https://pypi.nvidia.com"]
